--- a/Begium.Data/Begium.Data.csproj
+++ b/Begium.Data/Begium.Data.csproj
@@ -64,6 +64,12 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Begium.Core\Begium.Core.csproj">
+      <Project>{e21b87b2-25eb-4710-8364-720054970db8}</Project>
+      <Name>Begium.Core</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
