--- a/Begium.Web/Web.config
+++ b/Begium.Web/Web.config
@@ -10,6 +10,56 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
+  <log4net>
+    <appender name="BaseLog" type="log4net.Appender.RollingFileAppender">
+      <file value="Log\BaseLog.log" />
+      <appendToFile value="true" />
+      <rollingStyle value="Size" />
+      <maxSizeRollBackups value="10" />
+      <maximumFileSize value="10MB" />
+      <staticLogFileName value="true" />
+      <layout type="log4net.Layout.PatternLayout">
+        <conversionPattern value="%date [%thread] %-5level %logger [%property{NDC}] - %message%newline" />
+      </layout>
+    </appender>
+    <appender name="SmtpAppender" type="log4net.Appender.SmtpAppender">
+      <from value="no-reply@gumtree-protool.com" />
+      <to value="longnguyen@denovu.com" />
+      <subject value="Begium trace error" />
+      <authentication value="Basic" />
+      <username value="AKIAINYGIH5UACTLX6CA" />
+      <password value="AqmjMPKz35n3gBpzBqYlOjTu0RrMAe+98rZK3dmFrWCa" />
+      <port value="587" />
+      <enableSsl value="true" />
+      <smtpHost value="email-smtp.us-east-1.amazonaws.com" />
+      <bufferSize value="1" />
+      <lossy value="true" />
+      <evaluator type="log4net.Core.LevelEvaluator,log4net">
+        <threshold value="ERROR" />
+      </evaluator>
+      <layout type="log4net.Layout.PatternLayout,log4net">
+        <conversionPattern value="[%property{IP}] %date (%file)%newlineLogin: %identity (%level)%newline%message%newline%newline" />
+      </layout>
+    </appender>
+    <appender name="UdpAppender" type="log4net.Appender.UdpAppender">
+      <param name="RemoteAddress" value="127.0.0.1" />
+      <param name="RemotePort" value="8080" />
+      <layout type="log4net.Layout.XmlLayout">
+        <param name="Prefix" value="" />
+      </layout>
+    </appender>
+    <root>
+      <!-- ALL|DEBUG|INFO|WARN|ERROR|FATAL|OFF -->
+      <level value="DEBUG|INFO|WARN|ERROR" />
+      <appender-ref ref="UdpAppender" />
+      <appender-ref ref="SmtpAppender" />
+      <appender-ref ref="CommonLog" />
+    </root>
+    <logger name="GUMTREECONNECT-BL-LOGS">
+      <level value="INFO" />
+      <appender-ref ref="BLLog" />
+    </logger>
+  </log4net>
   <system.web>
     <compilation debug="true" targetFramework="4.6" />
     <httpRuntime targetFramework="4.6" />
