--- a/Begium.Web/Web.config
+++ b/Begium.Web/Web.config
@@ -10,7 +10,7 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
-  <log4net>
+  <!--<log4net>
     <appender name="BaseLog" type="log4net.Appender.RollingFileAppender">
       <file value="Log\BaseLog.log" />
       <appendToFile value="true" />
@@ -49,7 +49,7 @@
       </layout>
     </appender>
     <root>
-      <!-- ALL|DEBUG|INFO|WARN|ERROR|FATAL|OFF -->
+      --><!-- ALL|DEBUG|INFO|WARN|ERROR|FATAL|OFF --><!--
       <level value="DEBUG|INFO|WARN|ERROR" />
       <appender-ref ref="UdpAppender" />
       <appender-ref ref="SmtpAppender" />
@@ -59,7 +59,7 @@
       <level value="INFO" />
       <appender-ref ref="BLLog" />
     </logger>
-  </log4net>
+  </log4net>-->
   <system.web>
     <compilation debug="true" targetFramework="4.6" />
     <httpRuntime targetFramework="4.6" />
