--- a/Begium.Web/packages.config
+++ b/Begium.Web/packages.config
@@ -5,6 +5,7 @@
   <package id="Castle.Core" version="3.3.0" targetFramework="net46" />
   <package id="Castle.Windsor" version="3.3.0" targetFramework="net46" />
   <package id="Castle.Windsor.MsDependencyInjection" version="1.1.0" targetFramework="net46" />
+  <package id="FontAwesome" version="4.7.0" targetFramework="net46" />
   <package id="JavaScriptEngineSwitcher.Core" version="2.0.0" targetFramework="net46" />
   <package id="JavaScriptEngineSwitcher.Msie" version="2.0.0" targetFramework="net46" />
   <package id="JavaScriptEngineSwitcher.V8" version="2.0.0" targetFramework="net46" />
